--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <td class="github"> <a href="https://github.com/PareidoliaSL/WLIT3-Git-Assign-2.git"> Github Link</a> </th>
         <td class="hosted"><a href="">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> Design Assignemt 1</td>
+        <td class="github"> <a href="https://pareidoliasl.github.io/PareidoliaSL-Design-Assignment1-wlit3/"> Github Link</a> </th>
+        <td class="hosted"><a href="">Click here</a> </td>
+      </tr>
     </table>
     </div>
   </div>
