added design assign1

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </tr>
       <tr class="content">
         <td class="assignment"> Design Assignemt 1</td>
-        <td class="github"> <a href="https://pareidoliasl.github.io/PareidoliaSL-Design-Assignment1-wlit3/"> Github Link</a> </th>
-        <td class="hosted"><a href="">Click here</a> </td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/PareidoliaSL-Design-Assignment1-wlit3"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/PareidoliaSL-Design-Assignment1-wlit3/">Click here</a> </td>
       </tr>
     </table>
     </div>
