--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         <td class="hosted"><a href="">Click here</a> </td>
       </tr>
       <tr class="content">
+        <td class="assignment"> Git & GitHub</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/Lofi_Design-.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/Lofi_Design-/">Click here</a> </td>
+      </tr>
+      <tr class="content">
         <td class="assignment"> Design Assignment 1</td>
         <td class="github"> <a href="https://github.com/PareidoliaSL/PareidoliaSL-Design-Assignment1-wlit3"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/PareidoliaSL-Design-Assignment1-wlit3/">Click here</a> </td>
