--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <td class="hosted"><a href="">Click here</a> </td>
       </tr>
       <tr class="content">
-        <td class="assignment"> Git & GitHub</td>
+        <td class="assignment"> Lofi Designs</td>
         <td class="github"> <a href="https://github.com/PareidoliaSL/Lofi_Design-.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/Lofi_Design-/">Click here</a> </td>
       </tr>
