responsive design files added

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
         <td class="hosted"><a href="https://pareidoliasl.github.io/Lofi_Design-/">Click here</a> </td>
       </tr>
       <tr class="content">
-        <td class="assignment"> Design Assignment 1</td>
+        <td class="assignment"> Design Assignment 1 - HTML CSS2</td>
         <td class="github"> <a href="https://github.com/PareidoliaSL/PareidoliaSL-Design-Assignment1-wlit3"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/PareidoliaSL-Design-Assignment1-wlit3/">Click here</a> </td>
+      </tr>
+      <tr class="content">
+        <td class="assignment"> Design Assignment 1 - Responsive</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/Design_-Responsive-Tutangle.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/Design_-Responsive-Tutangle/">Click here</a> </td>
       </tr>
     </table>
     </div>
