--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <td class="github"> <a href="https://github.com/PareidoliaSL/Design_-Responsive-Tutangle.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/Design_-Responsive-Tutangle/">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> Design Final Assignment</td>
+        <td class="github"> <a href="https://github.com/shreya-codes/PharmacyLandingPage.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://shreya-codes.github.io/PharmacyLandingPage/?fbclid=IwAR0YRq8Bo9ydugSkeXwsD-oQf6q68gdE0sdLXZIpFi9c5ORtFLtUHrGPy0w">Click here</a> </td>
+      </tr>
     </table>
     </div>
   </div>
