--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
         <td class="github"> <a href="https://github.com/shreya-codes/PharmacyLandingPage.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://shreya-codes.github.io/PharmacyLandingPage/?fbclid=IwAR0YRq8Bo9ydugSkeXwsD-oQf6q68gdE0sdLXZIpFi9c5ORtFLtUHrGPy0w">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> Javascript Assignment</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/Javascript-Assignments.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/Javascript-Assignments/">Click here</a> </td>
+      </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Image Carousel : Assignment1</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/Js_1-Image-Carousel.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/Js_1-Image-Carousel/">Click here</a> </td>
+      </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Image Carousel with hold : Assignment2</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/JS_2-Image-Carousel-with-hold.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/JS_2-Image-Carousel-with-hold/">Click here</a> </td>
+      </tr>
+
+
     </table>
     </div>
   </div>
