--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
         <td class="github"> <a href="https://github.com/PareidoliaSL/JS_2-Image-Carousel-with-hold.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/JS_2-Image-Carousel-with-hold/">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Box Collision and Ant Smasher : Assignment3</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/Js_3-BoxCollision-AntSmasher.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/Js_3-BoxCollision-AntSmasher/">Click here</a> </td>
+      </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Car Game : Assignment3</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/JS_4-Car-Game.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/JS_4-Car-Game/">Click here</a> </td>
+      </tr>
+
 
 
     </table>
