--- a/index.html
+++ b/index.html
@@ -63,10 +63,22 @@
         <td class="hosted"><a href="https://pareidoliasl.github.io/Js_1-Image-Carousel/">Click here</a> </td>
       </tr>
       <tr class="content">
-        <td class="assignment"> JS_Image Carousel with hold : Assignment2</td>
+        <td class="assignment"> JS_Image Carousel with hold time: Assignment2</td>
         <td class="github"> <a href="https://github.com/PareidoliaSL/JS_2-Image-Carousel-with-hold.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/JS_2-Image-Carousel-with-hold/">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Box Collison: Assignment3i</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/JS_3-i-Box-Collison.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/JS_3-i-Box-Collison/">Click here</a> </td>
+      </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Ant Smasher: Assignment3ii</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/JS_3ii-Ant-Smasher.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/JS_3ii-Ant-Smasher/">Click here</a> </td>
+      </tr>
+
+
       
 
 
