car lane assign 4 added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
         <td class="github"> <a href="https://github.com/PareidoliaSL/JS_3ii-Ant-Smasher.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/JS_3ii-Ant-Smasher/">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Car Lane Game: Assignment4</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/JS_4-Car-Lane-Game.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/JS_4-Car-Lane-Game/">Click here</a> </td>
+      </tr>
 
 
       
