--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
         <td class="github"> <a href="https://github.com/PareidoliaSL/JS_4-Car-Lane-Game.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/JS_4-Car-Lane-Game/">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Flappy Bird: Assignment5</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/JS_5-Flappy-Bird.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/JS_5-Flappy-Bird/">Click here</a> </td>
+      </tr>
 
 
       
