--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <tr class="content">
         <td class="assignment"> Lofi Designs</td>
         <td class="github"> <a href="https://github.com/PareidoliaSL/Lofi_Design-.git"> Github Link</a> </th>
-        <td class="hosted"><a href="https://pareidoliasl.github.io/Lofi_Design-/">Click here</a> </td>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/Lofi_Design-/"></a> </td>
       </tr>
       <tr class="content">
         <td class="assignment"> Design Assignment 1 - HTML CSS2</td>
