final project completed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <td class="github"> <a href="https://github.com/shreya-codes/PharmacyLandingPage.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://shreya-codes.github.io/PharmacyLandingPage/?fbclid=IwAR0YRq8Bo9ydugSkeXwsD-oQf6q68gdE0sdLXZIpFi9c5ORtFLtUHrGPy0w">Click here</a> </td>
       </tr>
-      
+
       <tr class="content">
         <td class="assignment"> JS_Image Carousel : Assignment1</td>
         <td class="github"> <a href="https://github.com/PareidoliaSL/Js_1-Image-Carousel.git"> Github Link</a> </th>
@@ -87,9 +87,14 @@
         <td class="github"> <a href="https://github.com/PareidoliaSL/JS_5-Flappy-Bird.git"> Github Link</a> </th>
         <td class="hosted"><a href="https://pareidoliasl.github.io/JS_5-Flappy-Bird/">Click here</a> </td>
       </tr>
+      <tr class="content">
+        <td class="assignment"> JS_Expense Tracker: Final Assignment</td>
+        <td class="github"> <a href="https://github.com/PareidoliaSL/JS_Final-Expense-Tracker.git"> Github Link</a> </th>
+        <td class="hosted"><a href="https://pareidoliasl.github.io/JS_Final-Expense-Tracker/">Click here</a> </td>
+      </tr>
 
 
-      
+
 
 
     </table>
